 
 ** expfit             (patch #10092)
    explike
 
 ** gscatter           (patch #10043)

 ** inconsistent       (patch #10008)
 
 ** mhsample.m         (patch #10016)
 
 ** optimalleaforder.m (patch #10034)
 
 ** pca                (patch #10104)

 ** silhouette         (patch #9743)
 
 ** slicesample        (patch #10019)
 
 ** wblplot            (patch #8579)

 Improvements:
 =============

 ** boxplot: better Matlab compatibility; several Matlab-compatible
    plot options added (OutlierTags, Sample_IDs, BoxWidth, Widths,
    BoxStyle, Positions, Labels, Colors) and an Octave-specific one
    (CapWidhts); demos added; texinfo improved (patch #9930)

 ** crosstab.m: make n-dimensional (patch #10014)

 ** dendrogram.m: many improvements (patch #10036)

 ** fitgmdist.m: fix typo in ComponentProportion (bug #59386)
 
 ** gevfit: change orientation of results for Matlab compatibility (bug #47369)

 ** anovan.m: use double instead of toascii (bug #60514)

 ** stepwisefit.m: give another option to select predictors (patch #8584) 

 ** tricdf, triinv: fixes (bug #60113)
 

Summary of important user-visible changes for statistics 1.4.2:
-------------------------------------------------------------------

 ** canoncorr: allow more variables than observations

 ** fitgmdist: return fitgmdist parameters (Bug #57917)

 ** gamfit: invert parameter per docs (Bug #57849)

 ** geoXXX: update docs 'number of failures (X-1)' => 'number of failures (X)' (Bug #57606)

 ** kolmogorov_smirnov_test.m: update function handle usage from octave6+ (Bug #57351)

 ** linkage.m: fix octave6+ parse error (Bug #57348)

 ** unifrnd: changed unifrnd(a,a) to return a 0 rather than NaN (Bug #56342)

 ** updates for usage of depreciated octave functions

Summary of important user-visible changes for statistics 1.4.1:
-------------------------------------------------------------------
 ** update install scripts for octave 5.0 depreciated functions

 ** bug fixes to the following functions: